# tribufu-java

./: .gitignore  .gitmodules  .openapi-generator-ignore  Bootstrap.ps1  Bootstrap.sh  Cargo.toml  README.md  build.gradle  build.rs  gradle.properties  premake5.lua  settings.gradle  settings.gradle.kts
.openapi-generator/: FILES
Native/: premake5.lua
Native/Source/: Library.c  Library.h  TribuFu.java
Scripts/: Build.ps1  Check.ps1  Copyright.py  Package.ps1  Package.py
Source/: Library.c  Library.h  TribuFu.java  lib.rs
android/: build.gradle
android/src/main/: AndroidManifest.xml
example/: build.gradle
examples/: build.gradle
gradle/wrapper/: gradle-wrapper.properties
lib/: build.gradle  build.gradle.kts
lib/src/main/java/com/tribufu/: TribufuApi.java  TribufuApiOptions.java  TribufuBot.java  TribufuClient.java  TribufuServer.java
lib/src/main/kotlin/com/tribufu/sdk/: TribuFu.kt
lib/src/main/kotlin/tribufu/: TribuFu.kt
lib/src/main/kotlin/tribufu/models/: Email.kt  User.kt
lib/src/main/scala/: TribuFu.scala
lib/src/main/scala/models/: Email.scala  User.scala
lib/src/main/scala/tribufu/: Library.scala
lib/src/main/scala/tribufu/models/: Email.scala  User.scala
lib/src/test/java/com/tribufu/: TribufuApiTest.java  TribufuBotTest.java  TribufuClientTest.java  TribufuServerTest.java
lib/src/test/scala/tribufu/: LibrarySuite.scala
scripts/: build.ps1  generate.ps1
src/main/: AndroidManifest.xml
src/main/java/com/tribufu/: TribufuApi.java  TribufuApiSingleton.java
src/main/scala/com/tribufu/sdk/: Library.scala  ServiceInfo.scala
(+29 files in other folders)
