[package]
name = "TribuFu-Jvm"
version = "0.0.1"
description = "Jvm bindings to TribuFu SDK"
repository = "https://github.com/TribuFu/SDK"
authors = ["TribuFu <contact@tribufu.com>"]
license = "Apache-2.0"
edition = "2018"
publish = false

[lib]
name="TribuFu_Jvm"
crate-type = ["cdylib", "rlib"]
path = "Source/lib.rs"

[dependencies]
TribuFu = { path = "../DevKit" }
jni = "0.19.0"

[build-dependencies]
Alnilam-Build = { path = "../Engine/Source/Framework/Build" }
