[package]
name = "tribufu-jni"
version = "0.0.1"
description = "JVM bindings to TribuFu SDK"
repository = "https://github.com/TribuFu/SDK"
authors = ["TribuFu <contact@tribufu.com>"]
license = "Apache-2.0"
edition = "2018"
publish = false

[lib]
name="TribuFu_Jni"
crate-type = ["cdylib", "rlib"]
path = "Source/lib.rs"

[dependencies]
tribufu = { path = "../DevKit.Rs" }
jni = "0.19.0"
